--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,92 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  .max-width-container {
+    max-width: 1536px;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 0px 40px;
+  }
+
+  .hover-effect {
+    position: relative;
+  }
+
+  .hover-effect::after {
+    content: "";
+    position: absolute;
+    bottom: 4px;
+    left: 0;
+    display: inline-block;
+    height: 2px;
+    width: 0;
+    background-color: #222222;
+    transition: width 0.5s;
+  }
+
+  .hover-effect:hover::after {
+    width: 66.666%;
+  }
+
+  .hover-effect-full {
+    position: relative;
+  }
+
+  .hover-effect-full::after {
+    content: "";
+    position: absolute;
+    bottom: 4px;
+    left: 16px;
+    display: inline-block;
+    height: 2px;
+    width: 0;
+    background-color: #222222;
+    transition: width 0.5s;
+    transition: width 0.5s cubic-bezier(0.06, 0.07, 0.07, 1.62);
+  }
+
+  .hover-effect-full:hover::after {
+    width: calc(100% - 32px);
+  }
+
+  .underline-effect {
+    position: relative;
+  }
+
+  .underline-effect::after {
+    content: "";
+    position: absolute;
+    bottom: 4px;
+    left: 16px;
+    display: inline-block;
+    height: 2px;
+    width: calc(100% - 32px);
+    background-color: #222222;
+    transition: width 0.5s;
+  }
+
+  /* width */
+  .myscrollbar::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  /* Track */
+  .myscrollbar::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 5px;
+
+    height: 200px;
+  }
+
+  /* Handle */
+  .myscrollbar::-webkit-scrollbar-thumb {
+    background: #cecece;
+    border-radius: 20px;
+  }
+
+  /* Handle on hover */
+  .myscrollbar::-webkit-scrollbar-thumb:hover {
+    background: #dedede;
   }
 }
