--- a/app/globals.css
+++ b/app/globals.css
@@ -4,10 +4,10 @@
 
 @layer utilities {
   .max-width-container {
-    max-width: 1536px;
+    /* max-width: 1416px;
     margin-right: auto;
-    margin-left: auto;
-    padding: 0px 40px;
+    margin-left: auto; */
+    /* padding: 0px 40px; */
   }
 
   .hover-effect {
@@ -89,5 +89,15 @@
   /* Handle on hover */
   .myscrollbar::-webkit-scrollbar-thumb:hover {
     background: #dedede;
+  }
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
   }
 }
